<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logLogo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ultraregular"
        android:text="@string/manoto"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/logLogo"
        app:layout_constraintStart_toStartOf="@+id/logLogo"
        app:layout_constraintTop_toBottomOf="@id/logLogo" />

    <TextView
        android:id="@+id/subTitleLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/glegoobold"
        android:text="@string/food_delivery"
        android:textColor="@color/lightGreen"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/titleLog"
        app:layout_constraintStart_toStartOf="@+id/titleLog"
        app:layout_constraintTop_toBottomOf="@id/titleLog" />

    <TextView
        android:id="@+id/tvLogLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/glegoobold"
        android:textAlignment="center"
        android:text="Login To Your \n Admin Dashboard"
        android:textColor="@color/lightGreen"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/subTitleLog"
        app:layout_constraintStart_toStartOf="@+id/subTitleLog"
        app:layout_constraintTop_toBottomOf="@id/subTitleLog" />

    <EditText
        android:id="@+id/logEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:drawableStart="@drawable/email_24"
        android:drawablePadding="15dp"
        android:ems="15"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/tvLogLogin"
        app:layout_constraintStart_toStartOf="@+id/tvLogLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvLogLogin"
        android:background="@drawable/edittext"
        android:elevation="5dp"
        />

    <EditText

        android:id="@+id/logPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:background="@drawable/edittext"
        android:elevation="5dp"
        android:paddingStart="8dp"
        android:drawablePadding="15dp"
        android:layout_marginTop="8dp"
        android:ems="15"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/logEmail"
        app:layout_constraintStart_toStartOf="@+id/logEmail"
        app:layout_constraintTop_toBottomOf="@+id/logEmail" />

    <TextView
        android:id="@+id/tvLogOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/logPassword"
        app:layout_constraintStart_toStartOf="@+id/logPassword"
        app:layout_constraintTop_toBottomOf="@id/logPassword" />

    <TextView
        android:id="@+id/tvLogWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ultraregular"
        android:text="@string/continue_with"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvLogOr"
        app:layout_constraintStart_toStartOf="@+id/tvLogOr"
        app:layout_constraintTop_toBottomOf="@id/tvLogOr" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/google1"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btnLogFacebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogWith" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/facebook1"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnLogGoogle"
        app:layout_constraintTop_toBottomOf="@id/tvLogWith" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenbtn"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btnLogFacebook"
        app:layout_constraintStart_toStartOf="@+id/btnLogGoogle"
        app:layout_constraintTop_toBottomOf="@id/btnLogGoogle" />

    <TextView
        android:id="@+id/tvDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_account"
        android:textColor="@color/lightGreen"
        app:layout_constraintEnd_toEndOf="@+id/btnLogLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogLogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/ultraregular"
        android:text="@string/design_by_n_saleh"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvDontHaveAccount"
        app:layout_constraintStart_toStartOf="@+id/tvDontHaveAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>